[tool.poetry]
name = "pycrypto"
version = "0.1.0"
description = ""
authors = ["Матвей Немудров <matvey.nemudrov@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
