requires = ["pycoingecko", "pandas"]
build-backend = ["pycoingecko.build", "pandas.build"]
[project]
name = "PyCrypto"
version = "0.0.1"
authors = [
  { name="limping" },
]
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/limping23/PyCrypto"
[tool.poetry]
name = "pycrypto"
version = "1.0.0"
description = ""
authors = ["limping <matvey.nemudrov@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pycoingecko = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.3"
pycoingecko = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
